# tokamap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: pages.yml  publish-to-pypi.yml
0.2.0/: 404.html  index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html
0.3.0/python/: index.html
0.3.0/search/: search_index.json
0.3.1/schemas/mappings/: index.html
0.3.2/: index.html
0.3.2/python/: index.html
0.3.2/schemas/config/: index.html
0.3.2/schemas/globals/: index.html
0.3.2/schemas/schema/: index.html
develop/: 404.html  index.html
develop/python/: index.html
develop/schemas/config/: index.html
develop/schemas/globals/: index.html
develop/schemas/mapping_types/: index.html
develop/schemas/mappings/: index.html
develop/schemas/schema/: index.html
develop/search/: search_index.json
develop/validator/: index.html
docs/: index.md  python.md  validator.md
docs/schemas/: config.md  globals.md  mapping_types.md  mappings.md  schema.md
mappings/example/: globals.json  mappings.cfg.json
mappings/example/bad_mappings/40/: mappings.json
mappings/example/good_mappings/0/: mappings.json
mappings/test/: mappings.cfg.json
mappings/test/magnetics/: globals.json  mappings.json
src/: CMakeLists.txt  JSON_mapping_plugin.cpp  data.hpp  data_source.hpp  library.cpp  library.h  logging.cpp  logging.hpp  test.cpp
src/handlers/: mapping_handler.cpp  mapping_handler.hpp
src/map_types/: base_mapping.hpp  custom_mapping.cpp  dim_mapping.cpp  expr_mapping.hpp  map_arguments.hpp  plugin_mapping.cpp  value_mapping.cpp  value_mapping.hpp
src/tokamap/: __init__.py  main.py
src/tokamap/schemas/: globals.schema.json  mappings.cfg.schema.json  mappings.schema.json
src/tokamap/validator/: __init__.py  main.py  validate.py
src/utils/: print_uda_structs.hpp  ram_cache.cpp  ram_cache.hpp  scale_offset.cpp  scale_offset.hpp  subset.cpp  subset.hpp  uda_plugin_helpers.hpp  uda_type_sizes.hpp
tokamap_validator/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
tokamap_validator/.github/workflows/: publish-to-pypi.yml
tokamap_validator/src/tokamap_validator/: __init__.py  main.py  validate.py
tokamap_validator/src/tokamap_validator/schemas/: globals.schema.json  mappings.schema.json
