[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamap"
version = "0.2.0"
description = "A JSON schema-based framework for mapping and structuring experimental data"
authors = [
    { name = "Jonathan Hollocombe", email = "jonathan.hollocombe@ukaea.uk" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.0,<5.0.0",
]
keywords = [
    "tokamap",
    "validation",
    "schema",
    "experimental-data",
    "data-mapping",
    "json-schema",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
tokamap = "tokamap.main:run"
tokamap-validator = "tokamap.validator.main:run"

[project.urls]
"Homepage" = "https://github.com/ukaea/tokamap"
"Repository" = "https://github.com/ukaea/tokamap"
"Issue Tracker" = "https://github.com/ukaea/tokamap/issues"
"Documentation" = "https://github.com/ukaea/tokamap#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tokamap" = ["schemas/*.json"]
