[project]
name = "tokamap-validator"
version = "0.1.0"
description = ""
authors = [
    { name = "Jonathan Hollocombe", email = "jonathan.hollocombe@ukaea.uk" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jsonschema (>=4.25.0,<5.0.0)"]

[tool.poetry]
packages = [{ include = "tokamap_validator", from = "src" }]

[tool.poetry.scripts]
validator = "tokamap_validator.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
