[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamap-validator"
version = "0.1.0"
description = ""
authors = [
    { name = "Jonathan Hollocombe", email = "jonathan.hollocombe@ukaea.uk" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jsonschema (>=4.25.0,<5.0.0)"]

[project.scripts]
tokamap_validator = "tokamap_validator.main:run"

[tool.setuptools.package-data]
"*" = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/ukaea/tokamap"
"Issue Tracker" = "https://github.com/ukaea/tokamap/issues"
